--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
+.react-tabs {
+  -webkit-tap-highlight-color: transparent;
+}
+
+.react-tabs__tab-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+@media (max-width: 350px) {
+  .react-tabs__tab-list {
+    justify-content: start;
+  }
+}
+
+.react-tabs__tab {
+  display: inline-block;
+  border: 1px solid transparent;
+  border-bottom: none;
+  bottom: -1px;
+  position: relative;
+  list-style: none;
+  padding: 6px 12px;
+  cursor: pointer;
+  background-color: #e0eaf9;
+  border-radius: 15px;
+  margin: 5px 5px;
+}
+
+.react-tabs__tab--selected {
+    transition: background 0.5s ease;
+  background: #38bdf875;
+  font-weight: 500;
+  color: black;
+  border-radius: 15px;
+}
+
+.react-tabs__tab--disabled {
+  color: GrayText;
+  cursor: default;
+}
+
+.react-tabs__tab:focus {
+  outline: none;
+}
+
+.react-tabs__tab:focus:after {
+  content: "";
+  position: absolute;
+  height: 5px;
+  left: -4px;
+  right: -4px;
+  bottom: -5px;
+  background: #fff;
+}
+
+.react-tabs__tab-panel {
+  display: none;
+}
+
+.react-tabs__tab-panel--selected {
+  display: block;
+}
