--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
 }
 
 .react-tabs__tab--selected {
-    transition: background 0.5s ease;
+  transition: background 0.5s ease;
   background: #38bdf875;
   font-weight: 500;
   color: black;
@@ -65,3 +65,9 @@
 .react-tabs__tab-panel--selected {
   display: block;
 }
+
+
+@media print {
+  body {-webkit-print-color-adjust: exact;}
+  }
+  @page { size: auto;  margin: 0mm; }
